--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
     buildTypes {
         release {
@@ -27,7 +32,7 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.0.0'
 
-    def room_version = "2.1.0"
+    def room_version = "2.2.0"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation 'com.squareup.picasso:picasso:2.71828'
