Was able to test and get a response back of on chicken results.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
     packagingOptions {
         exclude 'META-INF/proguard/androidx-annotations.pro'
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 
 }
 dependencies {
@@ -51,8 +55,7 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.1'
 
     implementation 'com.fatsecret4j:fatsecret-platform:2.0'
-    implementation 'com.android.volley:volley:1.1.0'
-
+//    implementation 'com.android.volley:volley:1.1.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
