--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="edu.cnm.deepdive.macroscalculator">
 
+
+  <uses-permission android:name="android.permission.INTERNET"/>
+
   <application
-    android:allowBackup="true"
+    android:name=".MacrosCalculatorApplication"
+    android:usesCleartextTraffic="true"
+    android:allowBackup="false"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
+    <uses-library android:name="org.apache.http.legacy" android:required="false" />
     <activity
       android:name=".controller.MainActivity">
       <intent-filter>
