--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 def getServiceProperty(String property) {
     Properties properties = new Properties();
-    properties.load(new FileInputStream("../../credentials/fat-secret.properties"));
+    properties.load(new FileInputStream("$projectDir/../../credentials/fat-secret.properties"));
     return String.format("\"%s\"", properties.getProperty(property));
 }
 
@@ -49,6 +49,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
 
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.android.material:material:1.0.0'
 
     def room_version = "2.2.1"
